<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="643dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.CardView
            android:id="@+id/plant_info"
            android:layout_width="333dp"
            android:layout_height="439dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:background="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plant_description"
                    android:layout_width="match_parent"
                    android:layout_height="371dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="80dp"
                    android:paddingBottom="15dp"
                    android:text="@string/fakeplantdescription"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addplant"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/addplant"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:padding="15dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:clickable="true"
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/saveplant"
                        android:background="@android:color/darker_gray"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:padding="15dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/plant_compound"
            android:layout_width="186dp"
            android:layout_height="157dp"
            android:layout_below="@+id/plant_name"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/login_plant"
            android:translationZ="100dp"
            app:srcCompat="@drawable/plant_with_oval_clip" />

        <TextView
            android:id="@+id/plant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/plant_info"
            android:layout_marginTop="14dp"
            android:text="@string/fakeplantname"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>